# mcpelauncher-nohurtcam

./: .gitignore  CMakeLists.txt  README.md  map.txt
.github/workflows/: cmake.yml
src/: main.c  main.cpp  menu.hpp
